@@ -6,7 +6,7 @@ AM_CONFIG_HEADER(config.h)
 RPM_RELEASE=1
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(libdv, 0.99)
+AM_INIT_AUTOMAKE(libdv, 0.100)
 
 AM_MAINTAINER_MODE
 AC_LIBTOOL_PICMODE(no)
